# cijene-api

./: .env.docker.example  .env.example  .gitignore  Dockerfile  Dockerfile.crawler  Dockerfile.csv_processor  Dockerfile.service  README.md  crawler-scheduled-compose.yaml  crawler-scheduled.Dockerfile  crawler.Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  scheduled-run.sh
.github/workflows/: ci.yml
common/: __init__.py  barcodes.py
crawler/: crawl.py
crawler/cli/: crawl.py  db_importer.py  fetchhistory.py
crawler/db/: model.py
crawler/store/: base.py  boso.py  brodokomerc.py  bure.py  cities.py  dm.py  dukat.py  eurospin.py  from_csv.py  jadranka_trgovina.py  kaufland.py  konzum.py  lidl.py  lorenco.py  mocky.py  models.py  ntl.py  output.py  roto.py  spar.py  stanic.py  stridon.py  studenac.py  trgovina_krk.py  zabac.py
crawler/tests/: conftest.py  mocky.py  test_crawl.py  test_integration_db_importer.py  test_mock_crawl.py  test_unit_db_importer.py
crawler/tests/sample_data/test_chain_1/: prices.csv  products.csv  stores.csv
csv_processor/: __init__.py  importer.py
database/: schema.sql
docker/: crawler-cron  crawlercron
enrichment/: cities.csv  products.csv  stores.csv
mcp/: server.py
service/: config.py  main.py
service/db/: base.py  enrich.py  import.py  models.py  psql.py  psql.sql
service/routers/: v1.py
tests/: test_importer.py
tests/common/: test_barcodes.py
tests/crawler/store/: test_cities.py
